more event renaming, adding sections in report

--- a/dataset_preprocessing.ipynb
+++ b/dataset_preprocessing.ipynb
@@ -30,12 +30,20 @@
     "- Analysis was carried out in MATLAB 2022a using the EEGLab library.\n",
     "\n",
     "\n",
-    "### Some notes on the dataset\n",
+    "### Some notes on using the dataset\n",
     "- Although the paper says the data was sampled at 250 Hz, according to the dataset the sampling rate is 1000 Hz and we have proceeded assuming this 1kHz value.\n",
     "- The paper states that the 10-20 electrode montage was used.\n",
     "- Due to participants' wishes, only part of the data was shared by the researchers - that collected at the Oxford testing site. This means that we have fewer subjects to analyse, and also that the notch filtering required will be only at one frequency (50 Hz at Oxford).\n",
     "- Each subject's 'eeg' subfolder contains a 'sub-XX_task-casinos_events.json' containing names and descriptions of the events like onset of fixation cross, cue onset, response, and feedback. This list is not complete, namely some events like S12, S22, S32 for the cue onsets are missing. However, the events are present in the data and can be used directly for data processing.\n",
     "- Event name format: Each event name consists of four characters, with spaces used for padding (e.g. ```S  6, S 16```). However in some forms of output (e.g. in jupyter notebooks that we used while initially exploring the data) it can show up as three characters (```S 6, S 16```) and in the json file mentioned above the names are also slightly different (```S6, S16```). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Authors' Pipeline vs. Our Pipeline\n",
+    "\n"
    ]
   },
   {
@@ -291,23 +299,38 @@
     "\n",
     "#### Epochs\n",
     "\n",
-    "For the initial analysis, we selected the events related to win/loss feedback, i.e. S6, S16, S26, S36, S7, S17, S27, S37. These can be specified in the 'conditions' parameter of the configuration file. Later on, the pipeline can be run for a different set of events by changing the 'conditions' parameter, e.g. we can analyse cue-locked waveforms rather than feedback-locked as we have done here.\n",
+    "Following the paper, we have selected epochs as follows:\n",
+    "- ICA training - cue-locked, 0 to 3 seconds \n",
+    "- ERP analysis - feedback-locked, -200ms to +600ms\n",
     "\n",
-    "Following the paper, we have also selected epochs of -200ms to +600ms from the feedback event.\n",
+    "#### Events\n",
+    "\n",
+    "For this analysis, we selected the events related to win/loss feedback, i.e. S6, S16, S26, S36, S7, S17, S27, S37. These can be specified in the 'conditions' parameter of the configuration file. We can also rename the events for human-readability, specifying the event type - cue, beep, ..., win (feedback), loss (feedback) along with the task-cue combination - Low-Low (LL), Mid-Low (ML) and so on. There is a custom parameter ```renaming_flag``` which if set as ```True```, will rename the events.\n",
+    "\n",
+    "In future, the pipeline can also be run for a different set of events by changing the 'conditions' parameter, e.g. we can analyse cue-locked waveforms rather than feedback-locked as we have done here, by including cue events even during the post-ICA step.\n",
     "\n",
     "#### ICA for artefact removal:\n",
     "\n",
-    "The authors of the paper used different epochs for ICA (0-3 seconds starting at cue event) and for ERP\u0000 analysis (-0.2 to +06. second epochs locked to feedback events).  In a previous version of the pipeline we were using (1.5), epoching was done before ICA, whereas in the latest version v1.7, the epoching step can be run after the ICA steps. For our pipeline, we have a variable ```ica_train_step``` which should be set to True when performing the ICA and False after the ICA training is done. This will cause the relevant settings like event names (\"conditions\") and epoch length to be set accordingly.\n",
+    "The authors of the paper used different epochs for ICA (0-3 seconds starting at cue event) and for ERP\u0000 analysis (-0.2 to +06. second epochs locked to feedback events).  In a previous version of the pipeline we were using (1.5), epoching was done before ICA, whereas in the latest version v1.7, the epoching step can be explicitly run after the ICA steps. \n",
+    "\n",
+    "For our pipeline, we have a variable ```ica_train_step``` (default False) which should be set to True when performing the ICA and back to False after the ICA training is done. This will cause the relevant settings like event names (\"conditions\") and epoch length to be set accordingly.\n",
     "\n",
     "#### Peak-to-Peak based rejection\n",
     "\n",
-    "In the paper, the authors rejected an epoch from analysis if it had more than 150 microvolts of overall change across the epoch.\n"
+    "In the paper, the authors rejected an epoch from analysis if it had more than 150 microvolts of overall change across the epoch. We have done the same via the ```reject``` parameter.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Try it Yourself!\n",
+    "\n",
+    "These are the steps to run the pipeline from start to end:\n",
+    "\n",
+    "1. Initialisation: Set the values of study_name, bids_root, subjects, etc. (TODO add full list)\n",
+    "2. Run the first phase:"
+   ]
   },
   {
    "cell_type": "markdown",
