report - sections + content

--- a/dataset_preprocessing.ipynb
+++ b/dataset_preprocessing.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Introduction\n",
+    "\n",
+    "(TODO)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### \"Task-level Value Affects Trial-level Reward Processing\" - the original paper in brief\n",
     "\n",
     "#### Experiment: \n",
@@ -43,7 +52,17 @@
    "metadata": {},
    "source": [
     "### Authors' Pipeline vs. Our Pipeline\n",
-    "\n"
+    "\n",
+    "(TODO)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visual Inspection of raw data to find bad channels/subjects\n",
+    "\n",
+    "(TODO)"
    ]
   },
   {
@@ -61,16 +80,6 @@
     "1. We are removing the first **n** trials for every cue in every casino. This ensures that the participants are able to learn the pattern of every slot as we want to measure how the RewP changes in different average task values. For that the participants have to learn first how the cues of every slot machine correspond to the reward. Here, we decided to reduce the number of trials excluded per machine type (cue) to 4 trials, since we have less data to work with overall.\n",
     "2. We are removing participants that do not manage to get **threshold** of the learnable trials correct, i.e. choosing the lever with the higher win probability. Thus, we assume that participants did not truly care about the reward or did not manage to learn the cues. "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "source": []
   },
   {
    "cell_type": "code",
@@ -283,7 +292,8 @@
     "\n",
     "#### Downsampling:\n",
     "\n",
-    "To save on processing power required, we have downsampled the data from 1000 Hz to 150 Hz. ```mne-bids-pipeline``` constructs the PSD plot for frequencies up to 1.5 * lowpass_cutoff_frequency. Thus 150 Hz is sufficient to allow us to include all required frequencies in our analysis.\n",
+    "To save on processing power required, we had initially downsampled the data from 1000 Hz to 150 Hz. ```mne-bids-pipeline``` constructs the PSD plot for frequencies up to 1.5 * lowpass_cutoff_frequency. Thus 150 Hz is sufficient to allow us to include all required frequencies in our analysis.\n",
+    "However, the performance after resampling is also not noticeably better than without resampling, so we opted not to resample to avoid losing out on raw data.\n",
     "\n",
     "#### Filtering:\n",
     "\n",
@@ -317,7 +327,20 @@
     "\n",
     "#### Peak-to-Peak based rejection\n",
     "\n",
-    "In the paper, the authors rejected an epoch from analysis if it had more than 150 microvolts of overall change across the epoch. We have done the same via the ```reject``` parameter.\n"
+    "In the paper, the authors rejected an epoch from analysis if it had more than 150 microvolts of overall change across the epoch. We have done the same via the ```reject``` parameter.\n",
+    "\n",
+    "#### Evoked potentials\n",
+    "\n",
+    "(TODO) - conditions and contrasts\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Selecting ICA components\n",
+    "\n",
+    "(TODO)"
    ]
   },
   {
@@ -326,10 +349,34 @@
    "source": [
     "### Try it Yourself!\n",
     "\n",
-    "These are the steps to run the pipeline from start to end:\n",
+    "These are the steps to run the analysis from start to end:\n",
     "\n",
-    "1. Initialisation: Set the values of study_name, bids_root, subjects, etc. (TODO add full list)\n",
-    "2. Run the first phase:"
+    "1. **Download the dataset and extract it** to a folder of your choice. For us, the main project folder was \"EEG2324Brownie\" and the dataset in the folder 'Dataset/ds004147' inside it.\n",
+    "2. **Removing participants, invalid trials, and learning trials** from the dataset - run the script __ (TODO name) from ```utils.py```. This creates a new folder 'Dataset/ds004147-filtered/', which is the folder to use for the actual analysis.  \n",
+    "3. **Initialisation**: In the config file ```brownie-config.py```, set the values of parameters like study_name (main project folder - for us, 'EEG2324Brownie'), bids_root (should point to the new 'ds004147-filtered' folder), subjects (if you want to analyse only a few subjects vs. all), etc. (TODO check full list after cleaning up config file)\n",
+    "4. Filtering and ICA step:\n",
+    "    - Set ```ica_train_step = True``` in the configuration file\n",
+    "    - Run the initial pipeline steps from the command line:\n",
+    "      ```mne_bids_pipeline --config=./brownie-config.py --steps=init,preprocessing/_01_data_quality,preprocessing/_04_frequency_filter,preprocessing/_06a1_fit_ica,preprocessing/_06a2_find_ica_artifacts ```\n",
+    "    - The pipeline will create a new folder 'derivatives/mne_bids_pipeline' within the 'ds004147-filtered' folder (if it doesn't exist already) and store its outputs there. \n",
+    "5. ICA component inspection: For each subject analysed, open the corresponding folder in the derivatives section and inspect the report at sub-XX_task-casinos_proc-ica+components_report.html. In sub-XX_task-casinos_proc-ica_components.tsv you can mark individual ICA components as 'bad' or 'good' depending on what the pipeline has auto-classified as well as from personal judgement, and then save this file to be used for the next step.\n",
+    "6. Continue with epoching and apply ICA:\n",
+    "   - set ```ica_train_step = False``` to make sure analysis epochs are correctly created\n",
+    "   - Run ```mne_bids_pipeline --config=./brownie-config.py --steps=preprocessing/_07_make_epochs,preprocessing/_08a_apply_ica```\n",
+    "   - You can see the output of the ICA cleaning in sub-XX_task-casinos_report.html\n",
+    "8. Peak-to-Peak rejection: run ```mne_bids_pipeline --config=./brownie-config.py --steps=preprocessing/_09_ptp_reject```\n",
+    "9. Evoked Potentials:\n",
+    "   - run ```mne_bids_pipeline --config=./brownie-config.py --steps=sensor/_01_make_evoked```\n",
+    "   - run (TODO function name/ create cell to run this) to load and plot the evoked data. If you want to view only a subset of channels (e.g. only FCz), change the list in 'picks' before plotting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Further Analysis\n",
+    "\n",
+    "(TODO)"
    ]
   },
   {
@@ -343,11 +390,12 @@
    "source": [
     "#### Setup\n",
     "\n",
-    "We used the latest version of mne-bids-pipeline (1.7.0), running on Windows and on Ubuntu Linux. The environment can be replicated using the environment file available in the git of this project. \n",
+    "We used mne-bids-pipeline v1.7.0, running on Windows and on Ubuntu Linux. The environment can be replicated using the environment file available in the git of this project. \n",
     "\n",
     "#### References\n",
     "\n",
     "Paper: https://doi.org/10.1016/j.neuroimage.2022.119456.\n",
+    "\n",
     "BIDS data format: doi:10.1038/sdata.2016.44\n",
     "\n"
    ]
