--- a/m_snippets.ipynb
+++ b/m_snippets.ipynb
@@ -2033,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2049,30 +2049,30 @@
       "3\n",
       "Identifying common channels ...\n",
       "12 48 4\n",
-      "cond_list ['Win LL - Loss LL', 'Win ML - Loss ML', 'Win MH - Loss MH', 'Win HH - Loss HH']\n"
+      "cond_list ['Win LL - Loss LL', 'Win ML - Loss ML', 'Win MH - Loss MH', 'Win HH - Loss HH']\n",
+      "combining channels using \"mean\"\n",
+      "combining channels using \"mean\"\n",
+      "combining channels using \"mean\"\n",
+      "combining channels using \"mean\"\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Max\\AppData\\Local\\Temp\\ipykernel_26116\\541770525.py:28: RuntimeWarning: Only 1 channel in \"picks\"; cannot combine by method \"mean\".\n",
+      "C:\\Users\\Max\\AppData\\Local\\Temp\\ipykernel_26116\\2506840219.py:28: RuntimeWarning: Only 1 channel in \"picks\"; cannot combine by method \"mean\".\n",
       "  mne.viz.plot_compare_evokeds(\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "If \"colors\" is a dict its keys (['Win LL - Loss LL', 'Win ML - Loss ML', 'Win MH - Loss MH', 'Win HH - Loss HH']) must match the keys/conditions in \"evokeds\" (['Win LL − Loss LL', 'Win ML − Loss ML', 'Win MH − Loss MH', 'Win HH − Loss HH']).",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[32], line 28\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(sub_list), \u001b[38;5;28mlen\u001b[39m(evoked_ave_all), \u001b[38;5;28mlen\u001b[39m(grand_avgs)) \u001b[38;5;66;03m# just to check if the right number of results come out\u001b[39;00m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcond_list\u001b[39m\u001b[38;5;124m'\u001b[39m, cond_list)\n\u001b[1;32m---> 28\u001b[0m \u001b[43mmne\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mviz\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplot_compare_evokeds\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     29\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgrand_avgs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     30\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcombine\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmean\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# average erp across channels\u001b[39;49;00m\n\u001b[0;32m     31\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpicks\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mFCz\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# if we want to see only FCz\u001b[39;49;00m\n\u001b[0;32m     32\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcolors\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\n\u001b[0;32m     33\u001b[0m \u001b[43m        \u001b[49m\u001b[43m{\u001b[49m\u001b[43mcond_list\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     34\u001b[0m \u001b[43m         \u001b[49m\u001b[43mcond_list\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     35\u001b[0m \u001b[43m         \u001b[49m\u001b[43mcond_list\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     36\u001b[0m \u001b[43m         \u001b[49m\u001b[43mcond_list\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     37\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlinestyles\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\n\u001b[0;32m     38\u001b[0m \u001b[43m        \u001b[49m\u001b[43m{\u001b[49m\u001b[43mcond_list\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msolid\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     39\u001b[0m \u001b[43m         \u001b[49m\u001b[43mcond_list\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdashed\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     40\u001b[0m \u001b[43m         \u001b[49m\u001b[43mcond_list\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdotted\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     41\u001b[0m \u001b[43m         \u001b[49m\u001b[43mcond_list\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdashdot\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     42\u001b[0m \u001b[43m         \u001b[49m\u001b[43mylim\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mdict\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43meeg\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     43\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtime_unit\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mms\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     44\u001b[0m \u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\mne\\viz\\evoked.py:3003\u001b[0m, in \u001b[0;36mplot_compare_evokeds\u001b[1;34m(evokeds, picks, colors, linestyles, styles, cmap, vlines, ci, truncate_yaxis, truncate_xaxis, ylim, invert_y, show_sensors, legend, split_legend, axes, title, show, combine, sphere, time_unit)\u001b[0m\n\u001b[0;32m   2991\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m figs\n\u001b[0;32m   2993\u001b[0m \u001b[38;5;66;03m# colors and colormap. This yields a `styles` dict with one entry per\u001b[39;00m\n\u001b[0;32m   2994\u001b[0m \u001b[38;5;66;03m# condition, specifying at least color and linestyle. THIS MUST BE DONE\u001b[39;00m\n\u001b[0;32m   2995\u001b[0m \u001b[38;5;66;03m# AFTER THE \"MULTIPLE CHANNEL TYPES\" LOOP\u001b[39;00m\n\u001b[0;32m   2996\u001b[0m (\n\u001b[0;32m   2997\u001b[0m     _styles,\n\u001b[0;32m   2998\u001b[0m     _linestyles,\n\u001b[0;32m   2999\u001b[0m     _colors,\n\u001b[0;32m   3000\u001b[0m     _cmap,\n\u001b[0;32m   3001\u001b[0m     colorbar_title,\n\u001b[0;32m   3002\u001b[0m     colorbar_ticks,\n\u001b[1;32m-> 3003\u001b[0m ) \u001b[38;5;241m=\u001b[39m \u001b[43m_handle_styles_pce\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstyles\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlinestyles\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolors\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcmap\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconditions\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3004\u001b[0m \u001b[38;5;66;03m# From now on there is only 1 channel type\u001b[39;00m\n\u001b[0;32m   3005\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(ch_types) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\mne\\viz\\evoked.py:2294\u001b[0m, in \u001b[0;36m_handle_styles_pce\u001b[1;34m(styles, linestyles, colors, cmap, conditions)\u001b[0m\n\u001b[0;32m   2292\u001b[0m styles \u001b[38;5;241m=\u001b[39m _validate_style_keys_pce(styles, conditions, tags)\n\u001b[0;32m   2293\u001b[0m \u001b[38;5;66;03m# validate color dict\u001b[39;00m\n\u001b[1;32m-> 2294\u001b[0m colors, color_vals \u001b[38;5;241m=\u001b[39m \u001b[43m_validate_colors_pce\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcolors\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcmap\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconditions\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtags\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2295\u001b[0m all_int \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mall\u001b[39m([\u001b[38;5;28misinstance\u001b[39m(_color, Integral) \u001b[38;5;28;01mfor\u001b[39;00m _color \u001b[38;5;129;01min\u001b[39;00m color_vals])\n\u001b[0;32m   2296\u001b[0m \u001b[38;5;66;03m# instantiate cmap\u001b[39;00m\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\mne\\viz\\evoked.py:2163\u001b[0m, in \u001b[0;36m_validate_colors_pce\u001b[1;34m(colors, cmap, conditions, tags)\u001b[0m\n\u001b[0;32m   2161\u001b[0m \u001b[38;5;66;03m# validate color dict keys\u001b[39;00m\n\u001b[0;32m   2162\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mset\u001b[39m(colors)\u001b[38;5;241m.\u001b[39missubset(tags\u001b[38;5;241m.\u001b[39munion(conditions)):\n\u001b[1;32m-> 2163\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m   2164\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIf \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcolors\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m is a dict its keys (\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m) must \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m   2165\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmatch the keys/conditions in \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mevokeds\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m (\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m).\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[0;32m   2166\u001b[0m             \u001b[38;5;28mlist\u001b[39m(colors), conditions\n\u001b[0;32m   2167\u001b[0m         )\n\u001b[0;32m   2168\u001b[0m     )\n\u001b[0;32m   2169\u001b[0m \u001b[38;5;66;03m# validate color dict values\u001b[39;00m\n\u001b[0;32m   2170\u001b[0m color_vals \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(colors\u001b[38;5;241m.\u001b[39mvalues())\n",
-      "\u001b[1;31mValueError\u001b[0m: If \"colors\" is a dict its keys (['Win LL - Loss LL', 'Win ML - Loss ML', 'Win MH - Loss MH', 'Win HH - Loss HH']) must match the keys/conditions in \"evokeds\" (['Win LL − Loss LL', 'Win ML − Loss ML', 'Win MH − Loss MH', 'Win HH − Loss HH'])."
-     ]
+     "data": {
+      "text/plain": [
+       "[<Figure size 800x600 with 2 Axes>]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2107,17 +2107,9 @@
     "    grand_avgs,\n",
     "    combine=\"mean\", # average erp across channels\n",
     "    picks=\"FCz\", # if we want to see only FCz\n",
-    "    colors=\n",
-    "        {cond_list[0]:0,\n",
-    "         cond_list[1]:0,\n",
-    "         cond_list[2]:0,\n",
-    "         cond_list[3]:0},\n",
-    "    linestyles=\n",
-    "        {cond_list[0]:'solid',\n",
-    "         cond_list[1]:'dashed',\n",
-    "         cond_list[2]:'dotted',\n",
-    "         cond_list[3]:'dashdot'},\n",
-    "         ylim=dict(eeg=[-5, 20]),\n",
+    "    colors=['#EE82EE','#EE82EE','#a020f0','#a020f0'],\n",
+    "    linestyles=['solid','dashed','dotted','dashdot'],\n",
+    "    ylim=dict(eeg=[-5, 10]),\n",
     "    time_unit=\"ms\",\n",
     ")"
    ]
