--- a/dataset_preprocessing.ipynb
+++ b/dataset_preprocessing.ipynb
@@ -73,13 +73,15 @@
     "Below you can see how our analysis results in slightly different graphs than the ones presented in the original paper.\n",
     "\n",
     "On the top you can see the results for the win/loss waveforms of the original paper, on the bottom are our results.\n",
+    "The difference is not that much, however still present.\n",
     "\n",
-    "![](Report_Media/compared_3a.png \"Result comparison win/loss waveforms\")\n",
+    "![](Report_Media/compared_3a_final.png \"Result comparison win/loss waveforms\")\n",
     "\n",
     "\n",
     "Next, you can see the comparison of the difference waveforms, again with the original paper on the top and our results on the bottom.\n",
+    "In this case we can se a little more differences in the graphs compared to the first one. Since we don't have all participant data, since about half of them are not openly accessible this might be an explanation for the differences.\n",
     "\n",
-    "![](Report_Media/compared_3b2.png \"Result comparison win/loss waveforms\")"
+    "![](Report_Media/compared_3b_final.png \"Result comparison win/loss waveforms\")"
    ]
   },
   {
