--- a/m_snippets.ipynb
+++ b/m_snippets.ipynb
@@ -1896,7 +1896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1919,7 +1919,7 @@
       "Identifying common channels ...\n",
       "7\n",
       "Identifying common channels ...\n",
-      "1 8 8\n",
+      "12 96 8\n",
       "combining channels using \"mean\"\n",
       "combining channels using \"mean\"\n",
       "combining channels using \"mean\"\n",
@@ -1934,23 +1934,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Max\\AppData\\Local\\Temp\\ipykernel_26116\\4200557393.py:26: RuntimeWarning: Only a single dataset was passed to mne.grand_average().\n",
-      "  grand_avgs.append(mne.grand_average(evoked_ave_all[i])) # for this condition, average across subjects\n",
-      "C:\\Users\\Max\\AppData\\Local\\Temp\\ipykernel_26116\\4200557393.py:26: RuntimeWarning: Only a single dataset was passed to mne.grand_average().\n",
-      "  grand_avgs.append(mne.grand_average(evoked_ave_all[i])) # for this condition, average across subjects\n",
-      "C:\\Users\\Max\\AppData\\Local\\Temp\\ipykernel_26116\\4200557393.py:26: RuntimeWarning: Only a single dataset was passed to mne.grand_average().\n",
-      "  grand_avgs.append(mne.grand_average(evoked_ave_all[i])) # for this condition, average across subjects\n",
-      "C:\\Users\\Max\\AppData\\Local\\Temp\\ipykernel_26116\\4200557393.py:26: RuntimeWarning: Only a single dataset was passed to mne.grand_average().\n",
-      "  grand_avgs.append(mne.grand_average(evoked_ave_all[i])) # for this condition, average across subjects\n",
-      "C:\\Users\\Max\\AppData\\Local\\Temp\\ipykernel_26116\\4200557393.py:26: RuntimeWarning: Only a single dataset was passed to mne.grand_average().\n",
-      "  grand_avgs.append(mne.grand_average(evoked_ave_all[i])) # for this condition, average across subjects\n",
-      "C:\\Users\\Max\\AppData\\Local\\Temp\\ipykernel_26116\\4200557393.py:26: RuntimeWarning: Only a single dataset was passed to mne.grand_average().\n",
-      "  grand_avgs.append(mne.grand_average(evoked_ave_all[i])) # for this condition, average across subjects\n",
-      "C:\\Users\\Max\\AppData\\Local\\Temp\\ipykernel_26116\\4200557393.py:26: RuntimeWarning: Only a single dataset was passed to mne.grand_average().\n",
-      "  grand_avgs.append(mne.grand_average(evoked_ave_all[i])) # for this condition, average across subjects\n",
-      "C:\\Users\\Max\\AppData\\Local\\Temp\\ipykernel_26116\\4200557393.py:26: RuntimeWarning: Only a single dataset was passed to mne.grand_average().\n",
-      "  grand_avgs.append(mne.grand_average(evoked_ave_all[i])) # for this condition, average across subjects\n",
-      "C:\\Users\\Max\\AppData\\Local\\Temp\\ipykernel_26116\\4200557393.py:31: RuntimeWarning: Only 1 channel in \"picks\"; cannot combine by method \"mean\".\n",
+      "C:\\Users\\Max\\AppData\\Local\\Temp\\ipykernel_26116\\3966446996.py:31: RuntimeWarning: Only 1 channel in \"picks\"; cannot combine by method \"mean\".\n",
       "  mne.viz.plot_compare_evokeds(\n"
      ]
     },
@@ -1960,7 +1944,7 @@
        "[<Figure size 800x600 with 2 Axes>]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1982,8 +1966,8 @@
     "    'Loss HH'\n",
     "]\n",
     "\n",
-    "# sub_list = [\"27\",\"28\",\"29\",\"30\",\"31\",\"32\",\"33\",\"34\",\"35\",\"36\",\"37\",\"38\"]\n",
-    "sub_list = [\"35\"]\n",
+    "sub_list = [\"27\",\"28\",\"29\",\"30\",\"31\",\"32\",\"33\",\"34\",\"35\",\"36\",\"37\",\"38\"]\n",
+    "# sub_list = [\"35\"]\n",
     "grand_avgs = []\n",
     "# for each condition (task-cue combination), create a list of evoked responses across all subjects and then average\n",
     "for i in range(0,len(cond_list)):\n",
@@ -2033,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2060,7 +2044,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Max\\AppData\\Local\\Temp\\ipykernel_26116\\2506840219.py:28: RuntimeWarning: Only 1 channel in \"picks\"; cannot combine by method \"mean\".\n",
+      "C:\\Users\\Max\\AppData\\Local\\Temp\\ipykernel_26116\\1594297936.py:28: RuntimeWarning: Only 1 channel in \"picks\"; cannot combine by method \"mean\".\n",
       "  mne.viz.plot_compare_evokeds(\n"
      ]
     },
@@ -2070,7 +2054,7 @@
        "[<Figure size 800x600 with 2 Axes>]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2110,6 +2094,7 @@
     "    colors=['#EE82EE','#EE82EE','#a020f0','#a020f0'],\n",
     "    linestyles=['solid','dashed','dotted','dashdot'],\n",
     "    ylim=dict(eeg=[-5, 10]),\n",
+    "    title=('sub: ',sub_list),\n",
     "    time_unit=\"ms\",\n",
     ")"
    ]
