updated linear modeling

--- a/linear_modeling.ipynb
+++ b/linear_modeling.ipynb
@@ -828,13 +828,11 @@
     "### Multiple Linear Regression\n",
     "\n",
     "Numerical independent variables can be represented by just a single variable whereas for a categorical independent variable we have to create n - 1 dummy variables where n is the number of categories. This leads to the following variables:\n",
-    "- Task: categorical; x1 and x2 to represent Low / Mid / High\n",
-    "- Cue: categorical; x3 to represent Low / High\n",
-    "- Outcome: categorical; x4 to represent Win / Loss\n",
-    "- Performance: numerical; x5\n",
-    "- Previous Outcome: categorical; x6 \n",
+    "- Task_Cue Pair: categorical; x1, x2, x3 to represent LowLow / MidLow / MidHigh / HighHigh\n",
+    "- Performance: numerical; x4\n",
+    "- Previous Outcome: categorical; x5 \n",
     "\n",
-    "#### E(RewP) = β₀ + β₁x₁ + β₂x₂ + β₃x₃ + β₄x₄ + β₅x₅ + β₆x₆\n"
+    "#### E(RewP) = β₀ + β₁x₁ + β₂x₂ + β₃x₃ + β₄x₄ + β₅x₅\n"
    ],
    "metadata": {
     "collapsed": false
