--- a/dataset_preprocessing.ipynb
+++ b/dataset_preprocessing.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "(TODO)"
+    "We attempted to replicate the processing pipeline of the paper - Task-level Value Affects Trial-level Reward Processing (Hassall, Hunt, and Holroyd 2021). The researchers carried out their analysis in MATLAB 2022a using the EEGLab library, while we have used the python package ```mne-bids-pipeline``` that allows us to use py-mne functions in an easier way. The researchers provided a subset of their data, which we used in order to run our own pipeline. Since we did not have all the data from the original study, we predicted the results that we got would probably deviate from those in the paper, but we concentrated on doing the same processing steps as described in the paper."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### \"Task-level Value Affects Trial-level Reward Processing\" - the original paper in brief\n",
+    "### The original paper explained in brief\n",
     "\n",
     "#### Experiment: \n",
     "- Participants were presented with **slot machines** (\"trials\") where they had to select one of two arms to pull. If the participant selected the correct arm on the slot machine, they would **\"win\"** at the machine and gain \\\\$0.03, while if they selected the wrong arm, they would **\"lose\"** the trial i.e. gain \\\\$0.00.\n",
@@ -36,7 +36,6 @@
     "- The researchers looked into \"Reward Positivity\" (RewP), which corresponds to how much outcomes differ from learned action values \\[1].\n",
     "- They created the feedback-locked ERP (mean across epochs) for different task-cue-participant combinations. Then, they constructed difference waves between the mean win ERP and mean loss ERP across all participants for the task-cue combination.\n",
     "- They examined the data from the FCz electrode between 240–340 ms post feedback, based on the recommendations from previous research on reward prediction. The RewP was defined as the maximum voltage within this window for each task-cue-participant.\n",
-    "- Analysis was carried out in MATLAB 2022a using the EEGLab library.\n",
     "\n",
     "\n",
     "### Some notes on using the dataset\n",
