--- a/dataset_preprocessing.ipynb
+++ b/dataset_preprocessing.ipynb
@@ -125,10 +125,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Removing Participants and Trials from the Analysis.\n",
@@ -137,7 +134,9 @@
     "1. We are removing the first **n**(=4) trials for every cue in every casino. This ensures that the participants are able to learn the pattern of every slot as we want to measure how the RewP changes in different average task values. For that the participants have to learn first how the cues of every slot machine correspond to the reward. Here, we decided to reduce the number of trials excluded per machine type (cue) to 4 trials, since we have less data to work with overall.\n",
     "2. We are removing participants that do not manage to get **threshold** of the learnable trials correct, i.e. choosing the lever with the higher win probability. Thus, we assume that participants did not truly care about the reward or did not manage to learn the cues.\n",
     "\n",
-    "   ```drop_learning_nonlearner_invalid_trials()```\n",
+    "Hyperparameters: n=4, threshold=0.7, subjects_dir='Dataset/ds004147-filtered'\n",
+    "\n",
+    "   ```removed_trial_dict=drop_learning_nonlearner_invalid_trials(n=n, threshold=threshold, subjects_dir=subjects_dir)```\n",
     "   \n",
     "After choosing n=4 and threshold=0.7, no participants went under the threshold. The authors noted that some were excluded, so we believe that these participants were from the other test site."
    ]
@@ -145,17 +144,17 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Filter the first n=4 trials for every slot in every casino for every participant\n",
     "\n",
     "During the removal of bad participants, we also returned a filtered beh.tsv without the first n=4 trials. We do this for the eeg.vmrk and events.tsv files, respectively. Moreover, invalid trials are also removed, as the data is unnecessary.\n",
     "\n",
-    "```drop_trials_events()```\n"
+    "Hyperparameters: subjects_dir='Dataset/ds004147-filtered'\n",
+    "Parameters: removed_trial_dict retrieved from drop_learning_nonlearner_invalid_trials\n",
+    "\n",
+    "```drop_trials_events(removed_trial_dict, subjects_dir)```\n"
    ]
   },
   {
@@ -302,10 +301,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "#### Setup\n",
