--- a/linear_modeling.ipynb
+++ b/linear_modeling.ipynb
@@ -468,7 +468,7 @@
    "source": [
     "Given the box plots, there does not seem to be a significant difference in task cue pair for both the uncleaned and cleaned epochs. The anova tables for both data confirms that the task-cue is not significant to explain the variance in RewP. This outcome contradicts with the results from the paper, especially regarding the high-high pair vs the mid-high pair, there should be a significant differences in RewP generated as this was the central research question from the authors that the RewP value generated **IS** in context of the current task. \n",
     "\n",
-    "From the paper, the pair high_high should be the lowest out of all task-cue pair. Even in our cleaned data, that is not the case. Another interesting point to note is that the mid-high pair for the cleaned data has negative RewP values. We have taken a closer look into our implementation and we are certain that nothing went wrong here. (Sanity checks can be found in supplementary material)\n",
+    "From the paper, the pair high_high should be the lowest out of all task-cue pair. Even in our cleaned data, that is not the case. Another interesting point to note is that the mid-high pair for the cleaned data has negative RewP values. We have taken a closer look into our implementation and we are certain that nothing went wrong here.\n",
     "\n",
     "We conclude discrepancies in results is either by our different approach in preprocessing or the missing participants from the other test site.\n",
     "\n"
